app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-webapp
spec:
  type: ClusterIP
  selector:
    app: simple-webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
