app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-webapp-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: <appGwIp>.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-webapp
            port:
              number: 80
